--- a/module3_assignment/index.html
+++ b/module3_assignment/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MENU</title>
-    <link rel="stylesheet" href="css/bmenu.min.css">
-    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="cssfolder/bmenu.min.css">
+    <link rel="stylesheet" href="cssfolder/menu.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 
