--- a/module3_assignment/index.html
+++ b/module3_assignment/index.html
@@ -188,9 +188,9 @@
     
 
     <!-- jQuery (Bootstrap JS plugins depend on it) -->
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="jssfolder/jquery-3.1.1.min.js"></script>
+    <script src="jssfolder/bootstrap.min.js"></script>
+    <script src="jssfolder/script.js"></script>
 
 </body>
 
