--- a/module3_assignment/index.html
+++ b/module3_assignment/index.html
@@ -20,7 +20,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <div class="navbar-brand">
-                        <a href="menu.html"><h1>Food, LLC</h1></a>
+                        <a href="index.html"><h1>Food, LLC</h1></a>
                     </div>
 
                     <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsible-nav" aria-expanded="false">
