--- a/module4_assignment/index.html
+++ b/module4_assignment/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <h1>Solution of Assignment 4</h1>
-    <p>In this assignment we are going to have words spoken based on the first letter of their name.</p>
-    <p>Nmaes are fed and is checked in the console to see if the words are separated corerectly.</p>
+    <p>checkout the result of this assignment.</p>
+   
 </body>
 
 </html>
